Fix portfolio content not centered

--- a/src/Components/PortfolioContent/PortfolioContent.css
+++ b/src/Components/PortfolioContent/PortfolioContent.css
@@ -16,11 +16,6 @@
     color: white;
     padding: 0.75rem;
     margin-top: 1rem;
-    margin-right: 1rem;
-}
-
-.portfolio-item-container:last-child {
-    margin-right: 0;
 }
 
 .technologies-container {
